Fix jumping page on mobile

--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -1,7 +1,7 @@
 .Projects {
     @extend .main;
     margin         : auto;
-    margin-top     : 100px;
+    margin-top     : 100px !important;
     display        : flex;
     flex-direction : column;
     justify-content: center;
@@ -22,7 +22,6 @@
     }
 
     #google-we-were-here {
-        // height: calc(100vh - 300px);
         height       : 100%;
         margin-bottom: 15px;
         width        : 70vw;
